--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,15 @@
 			content="Web site created using create-react-app"
 		/>
 
-		<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap" rel="stylesheet">
+		<link
+			href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap"
+			rel="stylesheet"
+		/>
+
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+		/>
 
 		<title>Rest Countries API</title>
 	</head>
